@@ -1,5 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.1
+  *) [TS-979] Found a few places where we can segfault with strlcpy.
+
   *) [TS-938] Fix VIA to avoid loopback address.
 
   *) [TS-945] Convert transparent forward requests to server style when
